# Rust-PDFBox

./: .gitignore  Cargo.toml  README.md
benches/: bench_core.rs
docs/: FINAL_VERIFICATION_REPORT.md  REFACTOR_RUSTCRYPTO.md  SIGN_ALL_VARIANTS_RESULT.txt  STEP_COMPAT_HARNESS.md  STEP_XREF_STREAMS.md  TEST_RUN_REPORT.md
docs/porting/: FULL_PDFBOX_PARITY_PLAN.md  architecture.md  parity_matrix.md  v1_quality_gate.md
examples/: check_output.rs  compress_pdf.rs  create_all_fields.rs  digital_sign.rs  extract_images.rs  extract_text.rs  fill_form.rs  fill_form_xfa_hybrid.rs  pageops_example.rs  read_info.rs  read_xfa.rs
scripts/: sign_all_variants.sh
src/: lib.rs
src/compress/: cleanup.rs  color.rs  dedup.rs  font_subset.rs  images.rs  linearize.rs  mod.rs  streams.rs  version.rs
src/content/: graphics_state.rs  mod.rs  writer.rs
src/cos/: dictionary.rs  mod.rs  name.rs  object.rs  object_id.rs  stream.rs
src/crypto/: aes.rs  handlers.rs  md5.rs  mod.rs  permissions.rs  rc4.rs
src/font/: cmap.rs  descriptor.rs  encoding.rs  font.rs  mod.rs  simple.rs  type0.rs
src/forms/: appearance.rs  export.rs  field.rs  flatten.rs  import.rs  mod.rs  widget.rs  xfa.rs
src/image_extract/: decode.rs  export.rs  mod.rs
src/io/: lzw.rs  mod.rs
src/metadata/: mod.rs  xmp.rs
src/outline/: destination.rs  item.rs  mod.rs
src/pageops/: extract.rs  merge.rs  mod.rs  overlay.rs  rotate.rs  split.rs  watermark.rs
src/parser/: lexer.rs  malformed.rs  mod.rs  objstm.rs  parser.rs  xref.rs  xref_stream.rs
src/pdmodel/: builder.rs  mod.rs  page.rs  page_tree.rs
src/render/: mod.rs
src/signing/: acroform.rs  appearance.rs  asn1.rs  cms.rs  ltv.rs  mod.rs  validator.rs
src/text/: layout.rs  mod.rs
src/writer/: incremental.rs  mod.rs  serializer.rs  writer.rs
tests/: compat_harness.rs  corpus_breadth.rs  creation.rs  cross_validate.rs  digital_signature.rs  fixture_gen.rs  forms_xfa.rs  image_extract.rs  metadata_info.rs  metadata_xmp.rs  pageops.rs  parser_regression.rs  writer_comprehensive.rs
tests/cross_validation/: README.md  encrypted_permissions_all.json  encrypted_permissions_none.json  encrypted_permissions_print_only.json  font_heavy_text_empty_stream.json  font_heavy_text_hello_world.json  font_heavy_text_multiline.json  large_100_pages.json  large_200_pages.json  large_fifty_pages.json  malformed_broken_xref.json  malformed_empty_bytes.json  malformed_missing_header.json  smoke_a4_single_page.json  smoke_custom_page_size.json  smoke_five_pages.json  smoke_letter_single_page.json  smoke_minimal_catalog.json  smoke_rotated_270.json  smoke_rotated_90.json  smoke_round_trip.json  smoke_ten_pages.json  smoke_three_pages.json  smoke_version_1_7.json
tests/fixtures/: README.md
tests/fixtures/smoke/: hybrid_xfa_smoke_001.meta.json
tests/signing_assets/: ca-certs.pem  ca-chain.pem  good-user-crl-ocsp.p12  user-cert.pem  user-key.pem
tools/: ExtractSnapshots.java  GenerateFixtures.java  analyze_pdfs.py  check_dpi.py  check_jbig2.py  deep_analysis.py  find_missing.py  test_jbig2dec.py
