[package]
name = "rust-pdfbox"
version = "0.1.0"
edition = "2024"

[features]
default = ["text", "crypto", "layout"]
## Text extraction and font handling
text = []
## Encryption/decryption and permissions
crypto = ["dep:aes", "dep:cbc", "dep:md-5", "dep:cipher", "dep:digest", "dep:block-padding"]
## Advanced layout analysis (column detection, reading order)
layout = []
## All features enabled
full = ["text", "crypto", "layout"]

[dependencies]
# RustCrypto ecosystem for cryptographic operations
aes = { version = "0.8", optional = true }
cbc = { version = "0.1", optional = true }
md-5 = { version = "0.10", optional = true }
cipher = { version = "0.4", optional = true }
digest = { version = "0.10", optional = true }
block-padding = { version = "0.3", optional = true }

[[example]]
name = "read_info"
path = "examples/read_info.rs"

[[example]]
name = "extract_text"
path = "examples/extract_text.rs"

[[bench]]
name = "bench_core"
path = "benches/bench_core.rs"
harness = false
