[package]
name = "rust-pdfbox"
version = "0.1.0"
edition = "2024"

[features]
default = ["text", "crypto", "layout"]
## Text extraction and font handling
text = []
## Encryption/decryption and permissions
crypto = ["dep:aes", "dep:cbc", "dep:md-5", "dep:cipher", "dep:digest", "dep:block-padding"]
## Advanced layout analysis (column detection, reading order)
layout = []
## All features enabled
full = ["text", "crypto", "layout"]

[dependencies]
# RustCrypto ecosystem for cryptographic operations
aes = { version = "0.8", optional = true }
cbc = { version = "0.1", optional = true }
md-5 = { version = "0.10", optional = true }
cipher = { version = "0.4", optional = true }
digest = { version = "0.10", optional = true }
block-padding = { version = "0.3", optional = true }

# Digital-signature support (used by the `signing` module and example)
sha2 = "0.10"
rsa       = { version = "0.9", features = ["sha2"] }
p256      = { version = "0.13", features = ["pkcs8", "ecdsa"] }
der       = { version = "0.7",  features = ["derive", "oid"] }
pkcs8     = { version = "0.10", features = ["pem"] }
pkcs1     = { version = "0.7",  features = ["pem"] }
pem-rfc7468 = "0.7"
rand      = "0.8"
chrono    = { version = "0.4", default-features = false, features = ["std", "clock"] }

# CMS / PKCS#7 builder — same crate as rust_pdf_signing to produce
# identical CMS blobs that Adobe/Foxit accept.
cryptographic-message-syntax = "0.28.0"
x509-certificate = "0.25.0"
bcder = "0.7.6"

image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# LTV / revocation / DSS support (mirrors rust_pdf_signing)
reqwest    = { version = "0.12", features = ["blocking"] }
x509-parser = "0.18"
rasn-ocsp  = "0.28"
rasn-pkix  = "0.28"
rasn       = "0.28"

[[example]]
name = "read_info"
path = "examples/read_info.rs"

[[example]]
name = "extract_text"
path = "examples/extract_text.rs"

[[example]]
name = "digital_sign"
path = "examples/digital_sign.rs"

[dev-dependencies]
flate2 = "1"

[[bench]]
name = "bench_core"
path = "benches/bench_core.rs"
harness = false
