[package]
name = "rust-pdfbox"
version = "0.1.0"
edition = "2024"

[features]
default = ["text", "crypto", "layout", "forms", "pageops", "outline"]
## Text extraction and font handling
text = []
## Document outline (bookmarks)
outline = []
## Encryption/decryption and permissions
crypto = ["dep:aes", "dep:cbc", "dep:md-5", "dep:cipher", "dep:digest", "dep:block-padding"]
## Advanced layout analysis (column detection, reading order)
layout = []
## Forms API
forms = ["dep:quick-xml"]
## Page Manipulation
pageops = []
## Core compression: stream recompression (flate2) + object deduplication (rustc-hash) + cleanup + version + linearize
compress = ["dep:flate2", "dep:rustc-hash"]
## Zopfli DEFLATE: replace zlib level-9 with Zopfli for 3–8% better stream compression (slower)
compress-zopfli = ["compress", "dep:zopfli"]
## Image resampling: pure-Rust JPEG encode/decode + lossless PNG optimizer
compress-images = ["compress", "dep:jpeg-encoder", "dep:zune-jpeg", "dep:oxipng"]
## JBIG2 decode: decode JBIG2-compressed 1-bit images via libjbig2dec FFI (C library)
## Also enables CCITT Group 4 re-encoding of 1-bit images via the `fax` crate (lossless, smaller)
compress-jbig2 = ["compress-images", "dep:nipdf-jbig2dec", "dep:fax"]
## Best-quality JPEG via libjpeg-turbo bindings (same codec as ilovepdf; requires C toolchain)
compress-mozjpeg = ["compress-images", "dep:mozjpeg"]
## CMYK/ICC color conversion: lcms2 ICC engine + palette pure-Rust fallback
compress-color = ["compress", "dep:lcms2", "dep:palette"]
## Font subsetting: TrueType + CFF glyph subsetting via suLB2R2CCQCUGWKZKDbsetter + ttf-parser
compress-fonts = ["compress", "dep:subsetter", "dep:ttf-parser", "dep:owned_ttf_parser"]
## Full ilovepdf-grade: all passes (requires C toolchain for mozjpeg + lcms2 + jbig2dec)
compress-full = ["compress-mozjpeg", "compress-jbig2", "compress-zopfli", "compress-color", "compress-fonts"]
## All features enabled
full = ["text", "crypto", "layout", "compress", "compress-images", "compress-jbig2", "compress-zopfli", "compress-color", "compress-fonts"]
quick-xml = ["dep:quick-xml"]

[dependencies]
# RustCrypto ecosystem for cryptographic operations
aes = { version = "0.8", optional = true }
cbc = { version = "0.1", optional = true }
md-5 = { version = "0.10", optional = true }
cipher = { version = "0.4", optional = true }
digest = { version = "0.10", optional = true }
block-padding = { version = "0.3", optional = true }

# Digital-signature support (used by the `signing` module and example)
sha2 = "0.10"
sha1 = "0.10"
rsa       = { version = "0.9", features = ["sha2"] }
p256      = { version = "0.13", features = ["pkcs8", "ecdsa"] }
der       = { version = "0.7",  features = ["derive", "oid"] }
pkcs8     = { version = "0.10", features = ["pem"] }
pkcs1     = { version = "0.7",  features = ["pem"] }
pem-rfc7468 = "0.7"
rand      = "0.8"
chrono    = { version = "0.4", default-features = false, features = ["std", "clock"] }

# CMS / PKCS#7 builder — same crate as rust_pdf_signing to produce
# identical CMS blobs that Adobe/Foxit accept.
cryptographic-message-syntax = "0.28.0"
x509-certificate = "0.25.0"
bcder = "0.7.6"

image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
png = "0.17"

# ── Compression (Bonus 11) ──────────────────────────────────────────────────
# Core: stream re-compression + object deduplication
flate2           = { version = "1",    optional = true }   # FlateDecode level-9 re-compression
rustc-hash       = { version = "2",    optional = true }   # FxHasher64 for fast object dedup

# Image encoding/decoding (compress-images feature)
jpeg-encoder     = { version = "0.6",  optional = true }   # pure-Rust JPEG encoder
zune-jpeg        = { version = "0.4",  optional = true }   # fast pure-Rust JPEG decoder
oxipng           = { version = "9",    optional = true }   # lossless PNG optimizer

# Best-quality JPEG via libjpeg-turbo (compress-mozjpeg; requires C toolchain)
mozjpeg          = { version = "0.10", optional = true }   # libjpeg-turbo bindings (same as ilovepdf)

# JBIG2 decode (compress-jbig2; requires C jbig2dec library)
nipdf-jbig2dec   = { version = "0.4",  optional = true }   # FFI binding to libjbig2dec (embedded PDF mode)

# CCITT Group 3/4 encoder for 1-bit (B&W scanned) images (compress-jbig2)
fax              = { version = "0.2",  optional = true }   # pure-Rust CCITT G3/G4 encoder+decoder

# Zopfli optimal DEFLATE (compress-zopfli): 3–8% better than zlib level-9, ~100× slower
zopfli           = { version = "0.8",  optional = true, features = ["zlib"] }

# CMYK/ICC color management (compress-color feature)
lcms2            = { version = "6",    optional = true }   # ICC color engine (CMYK → sRGB)
palette          = { version = "0.7",  optional = true }   # pure-Rust color math fallback

# Font subsetting (compress-fonts feature)
subsetter        = { version = "0.2",  optional = true }   # TrueType + CFF font subsetter
ttf-parser       = { version = "0.25", optional = true }   # TrueType/OTF glyph table reader
owned_ttf_parser = { version = "0.25", optional = true }   # owned wrapper (no lifetime coupling)

# LTV / revocation / DSS support (mirrors rust_pdf_signing)
reqwest    = { version = "0.12", features = ["blocking"] }
x509-parser = "0.18"
rasn-ocsp  = "0.28"
rasn-pkix  = "0.28"
rasn       = "0.28"
quick-xml = { version = "0.39.2", features = ["serialize"], optional = true }

[[example]]
name = "read_info"
path = "examples/read_info.rs"

[[example]]
name = "extract_text"
path = "examples/extract_text.rs"

[[example]]
name = "digital_sign"
path = "examples/digital_sign.rs"

[[example]]
name = "compress_pdf"
path = "examples/compress_pdf.rs"
required-features = ["compress"]

[[example]]
name = "fill_form"
path = "examples/fill_form.rs"
required-features = ["forms"]

[[example]]
name = "fill_form_xfa_hybrid"
path = "examples/fill_form_xfa_hybrid.rs"
required-features = ["forms"]

[[example]]
name = "pageops_example"
path = "examples/pageops_example.rs"
required-features = ["pageops"]

[dev-dependencies]

[[bench]]
name = "bench_core"
path = "benches/bench_core.rs"
harness = false
